--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -2655,7 +2655,7 @@ Als Datensatz wurden die ersten 60~Filme (alphabetisch sortiert) aus der DBpedia
 
 \subsection{Teilnehmer}
 
-Die Teilnehmer der Nutzerstudie wurden im Starbucks in der Prager Straße in Dresden (Abbildung~\ref{}) zufällig ausgewählt. Sie waren zwischen~18 und 53~Jahren alt (Durchschnitt 30.3~Jahre, Median 27.5~Jahre, Standardabweichung 10.84~Jahre) und zu 60~\% weiblich (siehe Tabelle~\ref{table:evaluation-teilnehmer}). Als Gegenleistung für ihre Zeit bekamen sie einen Gutschein über 5~Euro.
+Die Teilnehmer der Nutzerstudie wurden im Starbucks in der Prager Straße in Dresden (Abbildung~\ref{figure:location}) zufällig ausgewählt. Sie waren zwischen~18 und 53~Jahren alt (Durchschnitt 30.3~Jahre, Median 27.5~Jahre, Standardabweichung 10.84~Jahre) und zu 60~\% weiblich (siehe Tabelle~\ref{table:evaluation-teilnehmer}). Als Gegenleistung für ihre Zeit bekamen sie einen Gutschein über 5~Euro.
 
 \begin{table}[htbp]
 	\centering
@@ -2677,11 +2677,18 @@ Die Teilnehmer der Nutzerstudie wurden im Starbucks in der Prager Straße in Dre
     \label{table:evaluation-teilnehmer}
 \end{table}
 
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=0.75\textwidth]{images/evaluation-location.jpg}
+   \caption{Ort der Nutzerstudie}
+   \label{figure:location}
+\end{figure}
+
 \subsection{Durchführung}
 
-Zunächst wurde den Teilnehmern der Studie grob erklärt, was ein Mashup ausmacht: Es gäbe verschiedene Fenster, welche dieselben Daten auf unterschiedliche Weise darstellen. Außerdem bestünden Zusammenhänge zwischen diesen Fenstern in dem Sinne, dass sie auf Änderungen in anderen Fenstern reagierten und sich anpassten. Jedoch gelte das nicht für alle Fenster und nicht in jede Richtung. Danach wurden sie über die zu lösenden Aufgaben aufgeklärt. Die Teilnehmer der Treatment Group wurden gebeten, dass sie, falls sie nicht weiter wissen, die Hilfefunktionen nutzen sollten anstatt lange zu probieren. Sie wurden auf die Bedienungs- und Kommunikationshilfe aufmerksam gemacht und erhielten außerdem den Hinweis, dass sie währenddessen nachfragen dürften um eine der Hilfefunktionen zu finden.
+Zunächst wurde den Teilnehmern der Studie grob erklärt, was ein Mashup ausmacht: Es gäbe verschiedene Fenster, welche dieselben Daten auf unterschiedliche Weise darstellen. Außerdem bestünden Zusammenhänge zwischen diesen Fenstern in dem Sinne, dass sie auf Änderungen in anderen Fenstern reagierten und sich anpassten. Jedoch gelte das nicht für alle Fenster und nicht in jede Richtung. Danach wurden sie über die zu lösenden Aufgaben aufgeklärt. Die Teilnehmer wurden gebeten, dass sie, falls sie nicht weiter wissen, die Hilfefunktionen nutzen sollten anstatt lange zu probieren. Sie wurden auf die Bedienungs- und Kommunikationshilfe aufmerksam gemacht und erhielten außerdem den Hinweis, dass sie währenddessen nachfragen dürften um eine der Hilfefunktionen zu finden.
 
-Danach wurden sie gebeten, die fünf Fragen zu beantworten. Dazu verwendeten sie das vorgestellte Mashup auf einem 13" Macbook Air (Mid 2012). Es wurde keine Maus zur Verfügung gestellt, sie benutzten das Touchpad des Notebooks. Für jede Aufgabe wurde die Zeit gestoppt und festgehalten, ob sie eine Hilfefunktion verwendeten. Danach füllten die Teilnehmer einen Fragebogen mit allgemeinen Informationen (Alter, Beruf, Geschlecht, Sprachniveau Englisch) und einen SUS \cite{Brooke1996} Fragebogen aus.
+Danach wurden sie gebeten, die fünf Fragen zu beantworten. Dazu verwendeten sie das vorgestellte Mashup auf einem Macbook Air (13~Zoll, Mid 2012). Es wurde keine Maus zur Verfügung gestellt, die Teilnehmer benutzten das Touchpad des Notebooks. Für jede Aufgabe wurde die Zeit gestoppt und festgehalten, ob sie eine Hilfefunktion verwendeten. Danach füllten die Teilnehmer einen Fragebogen mit allgemeinen Informationen (Alter, Beruf, Geschlecht, Sprachniveau Englisch) und einen SUS \cite{Brooke1996} Fragebogen aus. Das \enquote{System}, welches in den SUS Fragen angesprochen wird, referenzierte dabei VizBoard als Ganzes, inklusive Hilfesystem. Den Teilnehmern sollte nicht zugemutet werden, mental zwischen Hilfesystem und VizBoard zu trennen.
 
 \subsection{Ergebnisse}
 
@@ -2690,7 +2697,7 @@ Danach wurden sie gebeten, die fünf Fragen zu beantworten. Dazu verwendeten sie
 % weitere folge: technisch gesehen ist meine kontrollgruppe nicht viel anders als die treatment group
 % außerdem: da, wo es eigentlich gepasst hat, dass sie die hilfe aufrufen, ist der funke nicht so richtig übergesprungen. und ansonsten scheint es nicht das gewesen zu sein, was sie erwartet haben. leider weiß ich nicht, WAS sie erwartet haben, da war ich nicht geistesgegenwärtig genug um das zu fragen
 
-Zunächst muss festgestellt werden, dass die Teilnehmer nur in einem Drittel der möglichen Fälle (17 von 50 Fragen) die Bedienungshilfe verwendete (Abbildung~\ref{figure:result-helptask}). Das legt den Schluss nahe, dass die Bedienungshilfe in der Praxis noch weniger aufgerufen würde, da die Teilnehmer vor der Studie dazu ermuntert wurden. Ausprobieren war bei 90~\% der Teilnehmer die bevorzugte Strategie, dabei hätte ihnen die dynamische Meta-Hilfe (Abschnitt~\ref{section:konzeption:meta-hilfe:dynamisch} im Konzept) vermutlich mehr geholfen als die statische Bedienungshilfe.
+Zunächst muss festgestellt werden, dass die Teilnehmer nur in einem Drittel der möglichen Fälle (17 von 50 Fragen) die Bedienungshilfe verwendeten (Abbildung~\ref{figure:result-helptask}). Das legt den Schluss nahe, dass die Bedienungshilfe in der Praxis noch weniger aufgerufen würde, da die Teilnehmer vor der Studie dazu ermuntert wurden. Ausprobieren war bei 90~\% der Teilnehmer die bevorzugte Strategie, dabei hätte ihnen die dynamische Meta-Hilfe (Abschnitt~\ref{section:konzeption:meta-hilfe:dynamisch} im Konzept) vermutlich mehr geholfen als die statische Bedienungshilfe.
 
 \begin{figure}[htbp]
    \centering
@@ -2699,18 +2706,44 @@ Zunächst muss festgestellt werden, dass die Teilnehmer nur in einem Drittel der
    \label{figure:result-helptask}
 \end{figure}
 
+
 % gängige probleme bei der bedienungshilfe
 % die panels als aktionselemente verkannt, war tw. schon bei formativer studie so --> besseres layout
 % wording war nicht immer super. was heißt "click left button", wenn da nur ein touchpad ohne sichtbare buttons ist? sollte vielleicht vereinfacht werden, sodass left button default modifier ist und nicht explizit erwähnt wird
 % versucht die gehighlighteten elemente der hilfe zu benutzen. vielleicht hilfefenster shaky shaky wenn das passiert? um drauf hinzuweisen, dass das erst geschlossen werden muss
 % und "highlight by example" funktioniert nicht so toll.
 
+Während die Teilnehmer versuchten, die Bedienungshilfe zu verstehen, waren ein paar Missverständisse gehäuft zu beobachten. Zwei Testpersonen versuchten die Comic Panels zu klicken, wobei eine dazu durch die Beschriftung \enquote{Click Left Button} in der Mitte verleitet wurde. Dieses Verhalten zeigten auch schon Testpersonen der formativen Studie, woraus geschlossen wurde, dass ein ansprechenderes, mehr nach Comic aussehendes Layout notwendig ist.
+
+Die Formulierung der Operation im mittleren Panel sollte klarer sein, da sie für drei Teilnehmer nicht ganz verständlich war. Für manche war sie zu genau, sie suchten beim Touchpad des Macbooks nach einer linken oder rechten Taste\footnote{Das Touchpad des Macbooks hat nur eine physische Taste. Ein Rechtsklick wird ausgelöst, nachdem diese mit zwei Fingern gleichzeitig gedrückt wurde.}. Diesen Personen hätte \enquote{Click} voll ausgereicht. Für eine andere war die Beschreibung wiederum zu ungenau, sie verkannte das linke Panel als Aktionselement. Ihr wäre mit der Beschreibung \enquote{Click Left Mouse Button} mehr geholfen, weswegen die Formulierungen möglichst genau sein sollten.
+
+Fast die Hälfte der Teilnehmer sah sich die Bedienungshilfe an und versuchte danach auf den von der Hilfe hervorgehobenen Elementen zu arbeiten. Aus diesem Grund sollte deutlicher gemacht werden, dass diese nur eine Kopie darstellen, oder nach Klick noch einmal abgefragt werden, ob die Hilfe aufgerufen oder geschlossen werden soll.
+
 % kommunikationshilfe wurde gar nicht verwendet, obwohl sie einigen wahrscheinlich geholfen hätte. zeichen dafür, dass dyn. hilfefkt. schon gut wären.
 
-Nur ein Teilnehmer rief die Kommunikationshilfe auf. Die anderen hatten sie vergessen oder erhofften sich nicht viel davon, obwohl sie ihnen vermutlich geholfen hätte. Um die Benutzer stärker darauf hinzuweisen, sollte die dynamische Kommunikationshilfe umgesetzt und in einer Studie evaluiert werden. Den Testpersonen, welche die Kommunikationshilfe nicht von selber benutzen, wurde sie am Ende gezeigt. Sie war für alle verständlich, was wohl auch daran liegt, dass die Captions der Bilder einen erklärenden Satz bilden (\enquote{Select a movie to highlight a movie.}).
+Nur ein Teilnehmer rief die Kommunikationshilfe auf. Die anderen hatten sie vergessen oder erhofften sich nicht viel davon, obwohl sie ihnen vermutlich geholfen hätte. Um die Benutzer stärker darauf hinzuweisen, sollte die dynamische Kommunikationshilfe umgesetzt und in einer Studie evaluiert werden. Den Testpersonen, welche die Kommunikationshilfe nicht von selber benutzten, wurde sie am Ende gezeigt. Sie war für alle verständlich, was wohl auch daran liegt, dass die Captions der Bilder einen erklärenden Satz bilden (\enquote{Select a movie to highlight a movie.}).
 
 % vergleich von effizienz und effektivität unter teilnehmern mit/ohne hilfe pro aufgabe ist wahrscheinlich sinnlos. die leute, welche keine hilfe brauchten, hatten oft einen ungefähren plan, brauchten sie also gar nicht. natürlich sind sie schneller als die leute, welche erst die hilfe aufrufen und verstehen müssen.
 
+% SUS score: durchwachsen
+
+Die Ergebnisse des SUS Fragebogens sind durchwachsen, aber insgesamt positiv (Abbildung~\ref{figure:result-sus}). Der Median beträgt 73.75 (Standardabweichung 17.64), was nach \cite{Bangor2009} einem \enquote{Gut} entspricht.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=0.5\textwidth]{images/evaluation-result-sus.png}
+   \caption{SUS Ergebnisse}
+   \label{figure:result-sus}
+\end{figure}
+
+% 10: alle aufgaben gelöst, bei zwei deutlich länger gebraucht als median. hatte nicht verstanden, das hilfe kopie.
+% 7: hat sich erst hilfe angekuckt und dann alles super gelöst, bis auf die letzte aufgabe
+% 4: ist mein ausreisser nach unten, die hat weder einen plan gehabt, wie das system funktioniert noch ansatzweise eine lösungsstrategie. weiß auch gar nicht, was der geholfen hätte. weniger aufregung vielleicht.
+% 2: wirkte eigentlich sehr sicher. hat auch im feedback angemerkt, dass sie es ganz cool findet
+
+Auffällig sind die vier Teilnehmer, welche einen SUS Score von weniger als~60 vergaben. Nummer~2 wirkte während der Studie sehr sicher und merkte auch im Feedback an, dass sie das System VizBoard an sich interessant und nützlich findet. Zeitlich befand sie sich im Mittelfeld. Teilnehmerin~4 hatte kein mentales Modell dafür, wie Mashups funktionieren und konnte deswegen auch keine Lösungsstrategie planen, weswegen sie sehr lange für jede Frage benötigte. Teilnehmerin Nummer~7 sah sich erst alle Hilfefunktionen an und löste danach alle Fragen vergleichsweise schnell, bis auf die Letzte auch alle korrekt. Die letzte Teilnehmerin konnte alle Aufgaben lösen, benötigte aber bei zwei davon deutlich länger als die anderen. Sie hatte Probleme zu verstehen, dass die Hilfe Kopien erstellte, auf denen sie nicht arbeiten kann.
+
+Den Beobachtungen nach zu urteilen hätten die Bewertungen der Teilnehmerinnen~2 und~7 eigentlich besser ausfallen müssen. Zumindest bei ersterer fällt auf, dass sieben (von zehn) Aussagen mit einer~3, die anderen mit~2 und~4 bewertet wurden. Vielleicht ist sie einfach kein entscheidungsfreudiger Mensch. 
 
 \section{Entwicklungsaufwand}
 \label{section:evaluation:entwicklungsaufwand}
