--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -2672,6 +2672,15 @@ Als Datensatz wurden die ersten 60~Filme (alphabetisch sortiert) aus der DBpedia
 
 \subsection{Aufgaben}
 
+Die Teilnehmer sollten folgende Aufgaben lösen:
+
+\begin{enumerate}
+	\item \enquote{Wann erschien der Film Ever After (Jahr, Monat, Tag)?} Zur Lösung dieser Aufgabe mussten sie den Film zuerst in der Tabelle und danach in der Timeline auswählen oder direkt in der Timeline danach suchen und auswählen.
+	\item \enquote{War Chaplin im Vergleich zu anderen Filmen in diesem Zeitraum eher länger oder eher kürzer?} Die Teilnehmer mussten den Film Chaplin auswählen und im Liniendiagramm seine vertikale Position ablesen.
+	\item \enquote{Welcher Film wurde am drittbilligsten produziert?} Um diese Frage zu lösen, mussten die Teilnehmer die Tabelle nach Budget sortieren. Für manche ist das intuitiv, andere sollten dazu die Hilfe benötigen.
+	\item \enquote{Wer führte bei Big Night Regie?} Hier musste der Film ausgewählt und seine Beschreibung gelesen werden.
+	\item \enquote{Welcher der beiden Filme ist länger: Cassandras Dream oder Gaby: A true story?} Diese Frage ist die schwierigste von allen. Die gedachte Lösungsstrategie ist wie folgt: Zuerst müssen die beiden Filme ausgewählt werden, um sie im Liniendiagramm zu finden. Selbiges musste dann ungefähr auf den Teilbereich der beiden Filme gezoomt werden, sodass die vertikale Position genauer abgelesen und die Filme verglichen werden können.
+\end{enumerate}
 
 
 % ein paar aufgaben, zwischen 3 und 5, die nicht ganz offensichtlich sind. abhängigkeiten zwischen komponenten wären eine variante (zb highlight in linechart nur über tabelle) oder versteckte funktionen (doppelklick to pan, anyone?). 3 aufgaben mind., zwei ist ne komische zahl.
